# syndy-creator-studio

./: CMakeLists.txt
docs/: glb-gltf-source-mvp-plan.md  scene-3d-source-d3d11-visual-checkpoints.md  scene-3d-source-draco-validation.md  startup-splash-manual-validation.md  startup-splash-packaging-validation.md  vspace-source-d3d11-visual-checkpoints.md  vspace-source-draco-validation.md
docs/sphinx/: conf.py  frontends.rst  index.rst  reference-canvases.rst  reference-libobs-graphics-graphics.rst  reference-libobs-util-source-profiler.rst  reference-modules.rst  reference-outputs.rst  reference-scenes.rst  reference-sources.rst
frontend/: OBSApp.cpp  OBSApp.hpp  obs-main.cpp
frontend/cmake/: ui-utility.cmake  ui-widgets.cmake
frontend/components/: SourceTreeItem.cpp
frontend/data/locale/: en-US.ini
frontend/dialogs/: OBSBasicInteraction.cpp
frontend/forms/: obs.qrc
frontend/utility/: StartupProgressModel.cpp  StartupProgressModel.hpp  StartupSplashGuard.hpp
frontend/widgets/: OBSBasic.cpp  OBSBasicPreview.cpp  OBSBasicPreview.hpp  StartupSplashWidget.cpp  StartupSplashWidget.hpp
libobs/: obs-module.c  obs.h
plugins/: CMakeLists.txt
plugins/scene-3d-source/: CMakeLists.txt  scene-3d-gltf-loader.c  scene-3d-gltf-loader.h  scene-3d-plugin.c  scene-3d-source.c  scene-3d-source.h
plugins/scene-3d-source/cmake/windows/: obs-module.rc.in
plugins/scene-3d-source/data/effects/: scene-3d.effect
plugins/scene-3d-source/data/locale/: en-US.ini
plugins/vspace-source/: CMakeLists.txt  vspace-gltf-loader.c  vspace-gltf-loader.h  vspace-plugin.c  vspace-source.c  vspace-source.h
plugins/vspace-source/cmake/windows/: obs-module.rc.in
plugins/vspace-source/data/effects/: vspace.effect
plugins/vspace-source/data/locale/: en-US.ini
test/test-input/data/scene-3d/: README.md  draco-requires-decoder.gltf
test/test-input/data/vspace/: README.md  accessor-only.gltf  draco-fallback.gltf
test/win/: CMakeLists.txt  module-load-progress-test.cpp  module-progress-fail-init.c  module-progress-good.c  module-progress-missing-exports.c  module-progress-not-plugin.c  scene-3d-draco-loader-test.cpp  startup-progress-mapping-test.cpp  startup-progress-model-test.cpp  startup-splash-guard-test.cpp  startup-splash-widget-test.cpp  vspace-draco-loader-test.cpp
